--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.20.2",
     "axios": "^1.7.3",
     "date-fns": "^3.6.0",
     "js-sha256": "^0.11.0",
