--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.20.2",
     "axios": "^1.7.3",
     "date-fns": "^3.6.0",
+    "groq-sdk": "^0.9.0",
     "js-sha256": "^0.11.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
