--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "js-sha256": "^0.11.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
+    "react-awesome-reveal": "^4.2.14",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.2.1",
