--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-awesome-reveal": "^4.2.14",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.4.1",
     "react-hotkeys": "^2.0.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.26.0"
