--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "antd": "^5.20.2",
     "axios": "^1.7.3",
     "date-fns": "^3.6.0",
@@ -23,6 +24,7 @@
     "react-hot-toast": "^2.4.1",
     "react-hotkeys": "^2.0.0",
     "react-icons": "^5.2.1",
+    "react-popper": "^2.3.0",
     "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
