--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-hot-toast": "^2.4.1",
     "react-hotkeys": "^2.0.0",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.26.0"
+    "react-router-dom": "^6.26.0",
+    "react-timeago": "^7.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
